# data-visualisation

./: .pdm.toml  Dockerfile  Pipfile  Procfile  README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml  requirements.txt  sales.ipynb  sales.py  simple_sales.py
data/: Readme.md
