[tool.poetry]
name = "data-visualisation"
version = "0.1.0"
description = ""
authors = ["apaudel96 <apaudel96@ymail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.3"
panel = "^0.13.1"
plotly = "^5.9.0"
bokeh = "^2.4.3"
jupyter-bokeh = "^3.0.4"
voila = "^0.3.5"
ipykernel = "^6.15.1"
platformdirs = "^2.5.2"
humanize = "^4.2.3"

[tool.poetry.dev-dependencies]
black = {extras = ["jupyter"], version = "^22.6.0"}
pylama = "^8.3.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
