[tool.poetry]
name = "data-visualisation"
version = "0.1.0"
description = ""
authors = ["apaudel96 <apaudel96@ymail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.3"
panel = "^0.13.1"
plotly = "^5.9.0"
bokeh = "^2.4.3"
jupyter-bokeh = "^3.0.4"
voila = "^0.3.5"
ipykernel = "^6.15.1"
platformdirs = "^2.5.2"
humanize = "^4.2.3"

[tool.poetry.dev-dependencies]
black = {extras = ["jupyter"], version = "^22.6.0"}
pylama = "^8.3.8"


[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black[jupyter]<23.0.0,>=22.6.0",
    "pylama<9.0.0,>=8.3.8",
]

[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[project]
name = "data-visualisation"
version = "0.1.0"
description = ""
authors = [
    {name = "apaudel96", email = "apaudel96@ymail.com"},
    {name = "apaudel96",email = "apaudel96@ymail.com"}
]
dependencies = ["pandas<2.0.0,>=1.4.3", "panel<1.0.0,>=0.13.1", "plotly<6.0.0,>=5.9.0", "bokeh<3.0.0,>=2.4.3", "jupyter-bokeh<4.0.0,>=3.0.4", "voila<1.0.0,>=0.3.5", "ipykernel<7.0.0,>=6.15.1", "platformdirs<3.0.0,>=2.5.2", "humanize<5.0.0,>=4.2.3"]
requires-python = ">=3.10,<4.0"
license = {text = "MIT"}

[project.urls]
